# wagtailshop

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
home/: apps.py  models.py
shop/: models.py
shop/migrations/: 0001_initial.py  0002_alter_productimage_page.py  0003_remove_shopproductpage_sku_and_more.py
shop/templates/shop/: shop_product_page.html
wagtailshop/: wsgi.py
wagtailshop/settings/: base.py  dev.py
wagtailshop/templates/: base.html
